<resources>
    <string name="app_name">Info apteka</string>
    <string name="try_again">Повторить еще</string>
    <string name="error_network">Ошибка сети</string>
    <string name="error_server">Ошибка сервера</string>
    <string name="error_not_found">Не найдена страница</string>
    <string name="error_big_file">Слишком большой размер файла</string>
    <string name="Main">Главная</string>
    <string name="Categories">Категории</string>
    <string name="Basket">Корзина</string>
    <string name="Favourites">Избранное</string>
    <string name="Menu">Меню</string>
    <string name="Search">Поиск</string>
    <string name="Top_sales">Хиты продаж</string>
    <string name="View_all">Посмотреть все</string>
    <string name="Enter">Войти</string>
    <string name="Orders_history">История заказов</string>
    <string name="Delivery_condition">Условия доставки</string>
    <string name="Profile">Профиль</string>
    <string name="My_products">Мои товары</string>
    <string name="About_company">О компании</string>
    <string name="Help">Помощь</string>
    <string name="Program_rules">Правила программы</string>
    <string name="Exit_from_account">Выйти из аккаунта</string>
    <string name="sign_in">Вход</string>
    <string name="number_incorrect">Неправильно введен номер</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="registration">Регистрация</string>
    <string name="confirm_phone_number">Подтверждение номера телефона</string>
    <string name="wrong_phone_number">Неверный номер телефона?</string>
    <string name="send_again_in">Отправить снова через %s</string>
    <string name="message_not_delivered">Не пришло SMS сообщение?</string>
    <string name="confirm">Подтвердить</string>
    <string name="confirm_code">Код подтверждения</string>
    <string name="Sort">Сортировка</string>
    <string name="View">Вид:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Skip">Пропустить</string>
    <string name="onboarding_text_first">Совершайте покупки не выходя из дома</string>
    <string name="onboarding_text_second">Выбирайте из лучших производителей</string>
    <string name="onboarding_text_third">Бесплатная доставка по городу</string>
    <string name="Pre_order">Предзаказ</string>
    <string name="load_image">Загрузить фото</string>
    <string name="delete_photo">Удалить фото</string>
    <string name="choose_photo">Выберите фото</string>
    <string name="save">Сохранить</string>
    <string name="Edit">Редактировать</string>
    <string name="Remove">Удалить</string>
    <string name="Notifications">Уведомления</string>
    <string name="You_dont_have_notification_yet">У вас пока нет уведомлений</string>
    <string name="default_notification_channel_id">kg.sunrise.infoapteka</string>
    <string name="sertificates">Сертификаты</string>
    <string name="press_to">Нажмите чтобы</string>
    <string name="Add_product">Добавить товар</string>
    <string name="moderation_passed">прошел модерацию</string>
    <string name="moderation_in_progress">на модерации</string>
    <string name="moderation_denied">не прошел модерацию</string>
    <string name="sort_price_desc">По цене макс</string>
    <string name="sort_price_asc">По цене мин</string>
    <string name="sort_alphabet_asc">По алфавиту А-я</string>
    <string name="sort_alphabet_desc">По алфавиту Я-а</string>
    <string name="sort_new_asc">Сначала новые</string>
    <string name="sort_new_desc">Сначала старые</string>
    <string name="sort_bestseller">Хит продаж</string>
    <string name="Service_unavailable">Сервис временно недоступен</string>
    <string name="You_dont_have_favorites">У вас пока нет избранных товаров</string>
    <string name="type_confirm_code">Введите код</string>
    <string name="send_again">Отправить снова</string>
    <string name="has_account">Есть аккаунт?</string>
    <string name="Instruction">Инструкция</string>
    <string name="Bestseller_products">Часто покупаемые товары</string>
    <string name="No_connection">Ваше интернет-соединение нестабильно или отсутствует, попробуйте обновить</string>
    <string name="UpdateButton">Обновить</string>
    <string name="Update">Обновление</string>
    <string name="App_update">Доступно новое обновление. Версия: %1$s</string>
    <string name="Update_btn">Обновить</string>
    <string name="Reminder_btn">Напомнить позже</string>
    <string name="certificate_uploading_warning">Размер файла не должен превышать 2мб.\nФормат файла JPG.</string>
    <string name="pick_image_intent_text">Выберите фотографию сертификата</string>
    <string name="bishkek">Бишкек</string>
    <string name="osh">Ош</string>
    <string name="jalal_abad">Жалал-Абад</string>
    <string name="naryn">Нарын</string>
    <string name="batken">Баткен</string>
    <string name="ysyk_kol">Ысык-Көл</string>
    <string name="choose_city">Выбор города</string>
    <string name="date_creator">%d %d %d</string>
    <string name="ok">Ok</string>
    <string name="abolition">Отмена</string>
    <string name="profile_upload_file">Загрузить файлы</string>
    <string name="On_moderation">На модерации</string>
    <string name="Dismissed">Не одобрено</string>
    <string name="Auth_required">Требуется авторизация</string>
    <string name="registration_as">Зарегистрироваться как:</string>
    <string name="client">Покупатель</string>
    <string name="seller">Продавец</string>
    <string name="Order_number">Номер заказа: %1$d</string>
    <string name="Total">Итого</string>
    <string name="Order_status">Статус заказа:</string>
    <string name="Product_amount">Общее количество товаров:</string>
    <string name="Total_amount">Общая сумма:</string>
    <string name="Items_total_value">%s сом</string>
    <string name="Product_ordered">Оформлен</string>
    <string name="Product_delivered">Доставлен</string>
    <string name="Price">Цена:</string>
    <string name="Amount">Количество:</string>
    <string name="Expande_detail">Подробнее</string>
    <string name="Collapse_detail">Свернуть</string>
    <string name="birth_date">Дата рождения</string>
    <string name="add_phone_number">Добавить номер телефона</string>
    <string name="address_in_the_map">Адрес на карте</string>
    <string name="delivery_address">Адрес доставки</string>
    <string name="enter_address">Введите адрес</string>
    <string name="input_text">Введите текст</string>
    <string name="comments_to_ordering">Комментарий к заказу</string>
    <string name="not_authorized">Не авторизован</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="input_your_patronymic">Введите ваше отчество</string>
    <string name="Out_phones">Наши телефоны:</string>
    <string name="Email">Email:</string>
    <string name="Our_address">Наш адрес:</string>
    <string name="We_in_socials">Мы в социальных сетях:</string>
    <string name="Are_you_sure_to_exit">Вы действительно хотите выйти из аккаунта?</string>
    <string name="Map_pharmacy">Карта аптек</string>
    <string name="Order">Доставка</string>
    <string name="How_to_order">Как оформить</string>
    <string name="Lorem">Lorem ipsum dolor sit amet, sit amet,</string>
    <string name="Close">Закрыть</string>
    <string name="Auth_for_ordering">Авторизуйтесь для совершения покупки</string>
    <string name="registration_as_client">Регистрация как пользователь</string>
    <string name="Name">Имя*</string>
    <string name="type_name">Введите ваше имя</string>
    <string name="Second_name">Фамилия*</string>
    <string name="type_second_name">Введите вашу фамилию</string>
    <string name="middle_name">Отчество</string>
    <string name="type_middle_name">Введите ваше отчество</string>
    <string name="Choose_city">Выбор города*</string>
    <string name="choose_your_city">Выберите ваш город</string>
    <string name="write_address">Напишите ваш адрес</string>
    <string name="Address">Адрес*</string>
    <string name="Birthday">Дата рождения*</string>
    <string name="birthday">Дата рождения</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="loyalty_rules_pattern">С %s ознакомился(ась)</string>
    <string name="loyalty_rules">правилами программы\n</string>
    <string name="registration_as_seller">Регистрация как продавец</string>
    <string name="certificate_size_pattern">Размер: %.2fмб</string>
    <string name="registration_success">Вы успешно\n зарегистрировались</string>
    <string name="to_main">На главную</string>
    <string name="privacy_policy">Правила программы</string>
    <string name="wrong_confirm_code">Неверный код подтверждения</string>
    <string name="basket_final">Итого</string>
    <string name="basket_total_sum">Общая сумма</string>
    <string name="basket_items">Товаров в корзине</string>
    <string name="avatar_successfully_updated">Фото профиля успешно обновлен</string>
    <string name="profile_successfully_updated">Профиль успешно обновлен.</string>
    <string name="sertificateSize">Размер: %s мб</string>
    <string name="phone_number">Номер телефона</string>
    <string name="number">Телефон</string>
    <string name="profile_name">Имя</string>
    <string name="profile_second_name">Фамилия</string>
    <string name="profile_last_name">Отчество</string>
    <string name="profile_choose_city">Выбор города</string>
    <string name="profile_adress">Адрес</string>
    <string name="profile_birth_date">Дата рождения</string>
    <string name="Exit">Выйти</string>
    <string name="Cancel">Отмена</string>
    <string name="empty_items">В корзине пока нет товаров</string>
    <string name="Basket_Count_Item">Корзина(%d товаров)</string>
    <string name="Basket_Count_Less_Four">Корзина(%d товара)</string>
    <string name="Basket_Count_One">Корзина(%d товар)</string>
    <string name="make_order">Оформить заказ</string>
    <string name="Buy_for_s_som">Купить за %1$s с</string>
    <string name="S_som">%1$s сом</string>
    <string name="In_basket">В корзине</string>
    <string name="seller_products">Товары продавца</string>
    <string name="Preorder">Предзаказ</string>
    <string name="Call">Позвонить</string>
    <string name="farm_adresses">Адреса аптек</string>
    <string name="list_type_adress">Список</string>
    <string name="map_type_adress">Карта</string>
    <string name="farm_open">Открыто</string>
    <string name="farm_close">Закрыто</string>
    <string name="format_map">"%.14f,%.14f"</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_last_name">Введите фамилию</string>
    <string name="point_address">Указать адрес</string>
    <string name="ordering_processing">Оформление заказа</string>
    <string name="payment_method">Выбор оплаты</string>
    <string name="visa">VISA</string>
    <string name="elsom">Элсом</string>
    <string name="approximate_price_of_delivery">Примерная стоимость доставки:</string>
    <string name="total_sum">Общая сумма:</string>
    <string name="order">Заказать</string>
    <string name="choosen">Выбран</string>
    <string name="choose_address">Выбрать адрес</string>
    <string name="success_ordered">Ваш заказ успешно оформлен</string>
    <string name="failure">Ошибка</string>
    <string name="good">Хорошо</string>
    <string name="farm_now_open">Сейчас открыто</string>
    <string name="choose_category">Выбор категории</string>
    <string name="category">Категория</string>
    <string name="product_name">Название товара</string>
    <string name="type_product_name">Введите название</string>
    <string name="product_description">Описание товара</string>
    <string name="type_text">Введите текст</string>
    <string name="product_price">Цена товара (сом)</string>
    <string name="type_price">Введите цену</string>
    <string name="photo_limit">Количество загружаемых файлов минимум 4шт, максимум 8 шт.</string>
</resources>