<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <kg.sunrise.infoapteka.ui.views.PhoneNumberInputView
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        app:label="@string/phone_number"
        app:layout_constraintTop_toTopOf="parent" />

    <kg.sunrise.infoapteka.ui.views.TextInputView
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_3x"
        app:hint="@string/type_name"
        app:label="@string/Name"
        app:layout_constraintTop_toBottomOf="@id/et_phone_number" />

    <kg.sunrise.infoapteka.ui.views.TextInputView
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_3x"
        app:hint="@string/type_second_name"
        app:label="@string/Second_name"
        app:layout_constraintTop_toBottomOf="@id/et_first_name" />

    <kg.sunrise.infoapteka.ui.views.TextInputView
        android:id="@+id/et_middle_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_3x"
        app:hint="@string/type_middle_name"
        app:label="@string/middle_name"
        app:layout_constraintTop_toBottomOf="@id/et_last_name" />

    <kg.sunrise.infoapteka.ui.views.TextInputView
        android:id="@+id/et_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_3x"
        app:editTextRightIcon="@drawable/ic_arrow_half_down"
        app:hint="@string/choose_your_city"
        app:label="@string/Choose_city"
        app:layout_constraintTop_toBottomOf="@id/et_middle_name" />

    <kg.sunrise.infoapteka.ui.views.TextInputView
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_3x"
        app:hint="@string/write_address"
        app:label="@string/Address"
        app:layout_constraintTop_toBottomOf="@id/et_city" />

    <kg.sunrise.infoapteka.ui.views.TextInputView
        android:id="@+id/et_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_3x"
        app:editTextLeftIcon="@drawable/ic_calendar"
        app:hint="@string/birthday"
        app:label="@string/Birthday"
        app:layout_constraintTop_toBottomOf="@id/et_address" />

</androidx.constraintlayout.widget.ConstraintLayout>