<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_nav_graph"
        android:enabled="true"
        android:icon="@drawable/selector_nav_home"
        android:title="@string/Main" />
    <item
        android:id="@+id/categories_nav_graph"
        android:enabled="true"
        android:icon="@drawable/selector_nav_categories"
        android:title="@string/Categories"/>
    <item
        android:id="@+id/basket_nav_graph"
        android:enabled="true"
        android:icon="@drawable/selector_nav_basket"
        android:title="@string/Basket"/>
    <item
        android:id="@+id/favourites_nav_graph"
        android:enabled="true"
        android:icon="@drawable/selector_nav_favourites"
        android:title="@string/Favourites"/>
    <item
        android:id="@+id/menu_nav_graph"
        android:enabled="true"
        android:icon="@drawable/selector_nav_menu"
        android:title="@string/Menu" />
</menu>