<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.confirm.ConfirmFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true">

            <include
                android:id="@+id/incl_toolbar"
                layout="@layout/layout_toolbar_center_align" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_2.5x"
                android:paddingVertical="@dimen/dp_2x"
                app:layout_constraintBottom_toTopOf="@id/cl_tail"
                app:layout_constraintTop_toBottomOf="@id/incl_toolbar"
                app:layout_constraintVertical_chainStyle="spread_inside">

                <TextView
                    android:id="@+id/tv_label_confirm_phone_number"
                    style="@style/TextStyle.Header1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_phone_number"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_phone_number"
                    style="@style/TextStyle.Header3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4x"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_confirm_phone_number"
                    tools:text="Lorem ipsum" />

                <TextView
                    android:id="@+id/tv_label_wrong_phone_number"
                    style="@style/TextStyle.Content.Green"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wrong_phone_number"
                    app:layout_constraintTop_toBottomOf="@id/tv_phone_number" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_tail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_2.5x"
                android:layout_marginBottom="@dimen/dp_6x"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_head"
                app:layout_constraintVertical_chainStyle="spread_inside">

                <kg.sunrise.infoapteka.ui.views.TextInputView
                    android:id="@+id/et_confirm_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_3x"
                    android:inputType="number"
                    app:hint="@string/type_confirm_code"
                    app:label="@string/confirm_code"
                    app:layout_constraintBottom_toTopOf="@id/btn_confirm" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_confirm"
                    style="@style/ButtonStyle.SecondaryGray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_3.5x"
                    android:text="@string/confirm"
                    app:layout_constraintBottom_toTopOf="@id/tv_label_message_not_delivered" />

                <TextView
                    android:id="@+id/tv_label_message_not_delivered"
                    style="@style/TextStyle.Content.SecondaryGray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_1x"
                    android:gravity="center"
                    android:text="@string/message_not_delivered"
                    app:layout_constraintBottom_toTopOf="@id/btn_resend" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_resend"
                    style="@style/ButtonStyle.StrokeSecondaryGray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="@string/send_again_in" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/incl_progress"
        layout="@layout/layout_progress" />

</androidx.constraintlayout.widget.ConstraintLayout>
